test_suite5/ALAN/test_suite/alan-2022-examples/failing/001060_mutation.alan
source Y7 begin boolean Z function, v; relax end
